<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorAccent">

    <LinearLayout
        android:id="@+id/splash_screen"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/app_logo_splash"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/flight_icon"
            android:layout_margin="15dp"
            android:contentDescription="@string/startup_logo_showing"
            app:tint="@color/colorNavText" />

        <LinearLayout
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Please wait for initial loading..."
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <ProgressBar
                android:indeterminateTint="@color/colorNavText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />


        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/no_internet"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/no_internet_connection"
        android:contentDescription="@string/not_connected_to_internet" />


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:layout_above="@+id/navigation">
        <ProgressBar
            android:id="@+id/fab_refresh_refresh"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateTint="@color/colorNavText"
            android:elevation="4dp"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_refresh"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:contentDescription="@string/refresh"
            android:src="@drawable/refresh_icon_new"
            app:maxImageSize="55dp"
            app:useCompatPadding="false"
            android:scaleType="center"
            app:tint="@null"
            app:backgroundTint="@null"
            android:outlineProvider="none"

            />

    </FrameLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorNavText"
        app:itemIconTint="@color/colorNavIcon"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        app:menu="@menu/bottom_navigation"
        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>